syntax = "proto3";

package tenncor_profile;

option go_package = "github.com/mingkaic/accretion/proto/profile";

import "internal/onnx/onnx.proto";
import "google/api/annotations.proto";

message ListProfileRequest {
}

message ListProfileResponse {
    repeated string profiles = 1;
}

message SigmaNode {
    string id = 1;

    string label = 2;

    int64 x = 3;

    int64 y = 4;

    int64 size = 5;
}

message SigmaEdge {
    string id = 1;

    string source = 2;

    string target = 3;
}

message GetProfileRequest {
    string profile_id = 1;
}

// reply in the form of a sigma graph data
message GetProfileResponse {
    repeated SigmaNode nodes = 1;

    repeated SigmaEdge edges = 2;
}

message FuncInfo {
    oneof data {
        onnx.TensorProto dense_data = 1;

        onnx.SparseTensorProto sparse_data = 2;
    };

    uint64 runtime = 3;
}

message CreateProfileRequest {
	onnx.ModelProto model = 1;

    // operator data are not captured in model
    map<string,FuncInfo> operator_data = 2;
}

message CreateProfileResponse {
    string profile_id = 1;
}

service TenncorProfileService  {
	rpc ListProfile (ListProfileRequest) returns (ListProfileResponse) {
        option (google.api.http) = {
            get: "/v1/profiles"
        };
    }

	rpc GetProfile (GetProfileRequest) returns (GetProfileResponse) {
        option (google.api.http) = {
            get: "/v1/profile/{profile_id}"
        };
    }

	rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
}

option optimize_for = LITE_RUNTIME;
