syntax = "proto3";

package accretion_storage;

option go_package = "github.com/mingkaic/accretion/proto/storage";

message BlobStorage {
    repeated double data = 1;

    repeated int32 indices = 2;

    repeated int64 outer_indices = 3;
}
